--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
   <script src="assets/screen-helper.js"></script>
-  <app-root>Loading...</app-root>
+  <app-root><md-spinner></md-spinner></app-root>
 </body>
 </html>
